# rust-chat

./: .gitignore  Cargo.toml  app.yml
chat-server/: Cargo.toml
chat-server/src/: error.rs  main.rs
chat-server/src/config/: mod.rs
chat-server/src/handlers/: auth.rs  chat.rs  message.rs  mod.rs
chat-server/src/models/: user.rs
chat-server/src/router/: mod.rs
chat-server/src/utils/: jwt.rs
notify-server/: index.html
notify-server/src/: lib.rs  main.rs  sse.rs
