[workspace]
members = ["chat-server", "notify-server"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
serde = { version = "1.0.205", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono"] }
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
argon2 = { version = "0.5.3", features = ["std"] }
chrono = { version = "0.4.38", features = ["serde"] }
jwt-simple = { version = "0.12.9", default-features = false, features = ["pure-rust"] }
